---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: ??????
  Features:
    - Update to Factorio 0.18
    - Added silent belts.
    - Added adjustable robot size.
  Bugfixes:
    - Fixed incorrect bot resistance application.
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: ??????
  Features:
    - Added Underground distance matches bus options. Should work with most mods that add belts.
---------------------------------------------------------------------------------------------------
Version: 2.0.8
Date: ??????
  Bugfixes:
    - Multi concrete setting typo fix and is off by default.
---------------------------------------------------------------------------------------------------
Version: 2.0.7
Date: ??????
  Features:
    - Added multi concrete. Rotate concrete to get hazard versions.
---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: ??????
  Bugfixes:
    - Sanity check on lights.
---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: ??????
  Features:
    - Add return in process ingredients.
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: ??????
  Bugfixes:
    - Player/Character fixes.
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: ??????
  Bugfixes:
    - Fix wire tweak typos.
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: ??????
  Bugfixes:
    - Rolling stock back_light sanity check.